--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 /Prueba/nbproject/private/
 /ProgramacionJava/nbproject/private/
 /ProgramacionJava/build/
+/CatalogoPeliculas/nbproject/private/
+/CatalogoPeliculas/build/
