--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /Prueba/nbproject/private/
+/HolaMundoJava/build/
+/IntroduccionJDBC/target/
+/ManejoJDBC/target/
+/TransaccionesJDBC/target/
+/ManejoJDBC-pool-conexiones/PoolConexionesJDBC/target/
+/PoolConexionesJDBC/target/
